--- a/src/main/resources/templates/Feature1-SearchSkills/search.html
+++ b/src/main/resources/templates/Feature1-SearchSkills/search.html
@@ -9,7 +9,7 @@
 <div class="wrapper">
     <div class="container">
         <blockquote class="blockquote">
-            <center><p class="mb-0"><span style="color:#ad2eb3; font-weight: bold;" >Understand the skills you need to achieve your dream job</p></center>
+            <center><p class="mb-0"><span style="color:#ad2eb3; font-weight: bold; font-size:xx-large" >Understand the skills you need to achieve your dream job</span></p></center>
         </blockquote>
 
         <div id="resp-table">
@@ -20,16 +20,15 @@
                             Job
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" th:href="@{/skills/home}">Skill</a></li>
+                            <li><a class="dropdown-item" th:href="@{/search/courses/home}">Skill</a></li>
                         </ul>
 
                     </td>
                     <td>
-                        <form autocomplete="off" style="width: 800px;" th:action="@{/search/skills/result}" th:method="GET">
+                        <form autocomplete="off" style="width: 800px;" th:action="@{/search/skills/result}" method="GET">
                                 <span class="autocomplete form-outline input-group">
                                 <input id="job" type="text" name="job" placeholder="Enter your dream role" class="form-control">
-                                <button type="submit" class="btn btn-secondary" role="button"><i class="bi-search"></i></button>
-
+                                <button class="btn btn-secondary"  role="button"> <i class="bi-search"></i></button>
         </div>
         <!-- <input type="submit"> -->
         </form>
@@ -105,26 +104,18 @@
         document.addEventListener("click", function (e) {
             closeAllLists(e.target);
         });
-
     }
 
-
-    var job = [];
+    let jobList = []
 
     /*[# th:each="n : ${titles}"]*/
 
-    job.push("[(${n})]");
-    console.log(job)
+    jobList.push("[(${n})]");
+    console.log(jobList)
 
     /*[/]*/
 
-
-    autocomplete(document.getElementById("job"), job);
-
-
-
-
-
+    autocomplete(document.getElementById("job"), jobList);
 </script>
 </body>
 
