--- a/src/main/resources/templates/Feature3-Dashboard/calendar.html
+++ b/src/main/resources/templates/Feature3-Dashboard/calendar.html
@@ -39,27 +39,35 @@
                     </table>
                     <div id="Scheduled" class="course">
                         <div id="content-wrapper">
-                        <table class="table table-striped">      
-                            <tr>
-                              <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse1.jpg" width="160px" height="90px"></a> </td>
-                              <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>
+                        <table class="table table-striped" >
+                            <tr th:if="${scheduledCourseList.empty}">
+                                <td colspan="2"> No Scheduled Course Available </td>
                             </tr>
-                            <tr>
-                              <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse2.jpg" width="160px" height="90px"></a> </td>
-                              <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Learn java from the best industry expert so that you can be a pro</p></a><p class="fw-light">By Harvard</p></td>
+                            <tr th:each="course : ${scheduledCourseList}">
+                                <td><a th:href="@{|${course.getCourseUrl()}|}"> <img th:src="@{|${course.getThumbnail()}|}" width="160px" height="90px"></a> </td>
+                                <td><a th:href="@{|${course.getCourseUrl()}|}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a><p class="fw-light" th:text="${course.getSkill()}"></p></td>
                             </tr>
-                            <tr>
-                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse3.jpg" width="160px" height="90px"></a> </td>
-                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>
-                            </tr>
-                            <tr>
-                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse4.jpg" width="160px" height="90px"></a> </td>
-                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>
-                              </tr>
-                              <tr>
-                                  <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse5.jpg" width="160px" height="90px"></a> </td>
-                                  <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>
-                              </tr>
+
+<!--                            <tr>-->
+<!--                              <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse1.jpg" width="160px" height="90px"></a> </td>-->
+<!--                              <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>-->
+<!--                            </tr>-->
+<!--                            <tr>-->
+<!--                              <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse2.jpg" width="160px" height="90px"></a> </td>-->
+<!--                              <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Learn java from the best industry expert so that you can be a pro</p></a><p class="fw-light">By Harvard</p></td>-->
+<!--                            </tr>-->
+<!--                            <tr>-->
+<!--                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse3.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>-->
+<!--                            </tr>-->
+<!--                            <tr>-->
+<!--                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse4.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>-->
+<!--                              </tr>-->
+<!--                              <tr>-->
+<!--                                  <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse5.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                  <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">Full Introduction to JAVA</p></a><p class="fw-light">By Harvard</p></td>-->
+<!--                              </tr>-->
                         </table>
                     </div>
 
@@ -67,22 +75,29 @@
 
                     <div id="Saved" class="course" style="display:none">
                         <div id="content-wrapper">
-                            <table class="table table-striped">    
-                                <tr>
-                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse5.jpg" width="160px" height="90px"></a> </td>
-                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>
-                                <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>
+                            <table class="table table-striped">
+                                <tr th:if="${unscheduledCourseList.empty}">
+                                    <td colspan="2"> No Scheduled Course Available </td>
                                 </tr>
-                                <tr>
-                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse4.jpg" width="160px" height="90px"></a> </td>
-                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>
-                                <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>
+                                <tr th:each="course : ${unscheduledCourseList}">
+                                    <td><a th:href="@{|${course.getCourseUrl()}|}"> <img th:src="@{|${course.getThumbnail()}|}" width="160px" height="90px"></a> </td>
+                                    <td><a th:href="@{|${course.getCourseUrl()}|}"><p class="link-primary text-uppercase" th:text="${course.getMyCourseTitle()}"></p></a><p class="fw-light" th:text="${course.getSkill()}"></p></td>
                                 </tr>
-                                <tr>
-                                    <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse3.jpg" width="160px" height="90px"></a> </td>
-                                    <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>
-                                    <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse5.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>-->
+<!--                                <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>-->
+<!--                                </tr>-->
+<!--                                <tr>-->
+<!--                                <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse4.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>-->
+<!--                                <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>-->
+<!--                                </tr>-->
+<!--                                <tr>-->
+<!--                                    <td><a href="https://www.Youtube.com/"> <img src="/images/placeholder/placeholderCourse3.jpg" width="160px" height="90px"></a> </td>-->
+<!--                                    <td><a href="https://www.Youtube.com/"><p class="link-primary text-uppercase">From Zero to Hero in Python</p></a><p class="fw-light">By Harvard</p>-->
+<!--                                    <a class="btn btn-secondary" role="button"> Add to Calendar</a></td>-->
+<!--                                </tr>-->
                             </table>
                         </div>
                     </div>
@@ -129,7 +144,7 @@
                             <label>Event</label>
                             <input id="evtTxt" type="text">
                                 <select id="select" name="selectList">
-                                    <option th:each="course: ${unscheduledCourseList}" th:text="${course.getMyCourseTitle()}" th:value="${course.getMyCourseId()}"></option>
+                                    <option th:each="course: ${unscheduledCourseList}" th:text="${course.getMyCourseTitle()}" th:value="${course.getMyCourseTitle()}"></option>
                                 </select>
                             </div>
                             <div class="evt100">
@@ -166,7 +181,7 @@
   const selectCourse = document.getElementById("select");
 
   selectCourse.addEventListener("change", function () {
-      course.value = selectCourse.value
+      course.value = selectCourse.innerHTML;
   })
 
   saveBtn.addEventListener("click", function () {
@@ -185,7 +200,7 @@
 
   deleteBtn.addEventListener("click", function (){
       let xhr = new XMLHttpRequest();
-      let data = "s=" + start.value + "&"+ "e="+end.value;
+      let data = "s=" + start.value + "&"+ "e="+end.value + "&" + "c="+ course.value;
       xhr.open("POST", "/calendar/delete", true);
       xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
       xhr.send(data)
